--- a/FastCMs/CMakeLists.txt
+++ b/FastCMs/CMakeLists.txt
@@ -2,8 +2,7 @@
 cmake_minimum_required (VERSION 2.8)
 SET(CMAKE_BUILD_TYPE DEBUG)
 
-
 project (Demo)
 
 add_definitions(-std=c++11)
-add_executable(fastcm core.hpp graph.h graph_IO.h main.cpp)
+add_executable(fastcm core.cpp graph.cpp main.cpp)
